# proto_front

./: .env.example  .gitignore  .mcp.json  AGENTS.md  BRANDSTUDIOS_SOURCE_OF_TRUTH.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_INDEX.md  HANDOFF.md  NOTES.md  README.md  SECURITY.md  SUPPORT.md  TEST_LOG.md  hud.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
.github/: pull_request_template.md
brand-engine/: .env.example  pyproject.toml
brand-engine/brand_engine/: __init__.py
brand-engine/brand_engine/api/: server.py
brand-engine/brand_engine/cli/: main.py
brand-engine/brand_engine/core/: __init__.py  analyzer.py  embeddings.py  grader.py  image_grader.py  indexer.py  known_limitations_loader.py  models.py  pinecone_client.py  retriever.py  trainer.py  video_grader.py
brand-engine/data/brand_profiles/: cylndr.json  drift-mv.json  jenni_kayne.json  jennikayne.json  lilydale.json
brand-engine/scripts/: reindex_jk.py
brand-engine/tests/: conftest.py  test_10b_readiness.py  test_grade_image_v2.py  test_image_grader_internals.py  test_known_limitations_loader.py  test_narrative_prompt.py  test_video_grader_truncation.py
docs/: API.md  DEPENDENCY_POLICY.md  ESCALATION_LOG.md  FILE_TREE.md  INTEGRATION_AUDIT_2026-03-31.md  INTEGRATION_AUDIT_2026-04-07.md  PREFLIGHT_REPORT.md  ROADMAP.md  TECH_REQUIREMENTS_CLIENT_IMPLEMENTATION.md  static-preview.html
os-api/: .env.example  README.md  package-lock.json  package.json
src/: App.tsx  api.ts  index.css
worker/: config.py  (+4 more)
(+146 files in other folders)
